// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Registration /> interactions should execute handleResponse correctly 1`] = `
<div>
  <div
    class="container content"
    id="registration"
  >
    <div
      class="inner"
    >
      <form
        class="main-column "
        data-testid="registration-form"
        id="registration-form"
      >
        <div
          class="inner"
        >
          <div
            class="fieldset"
          >
            <div
              class="row email"
            >
              <label
                for="email"
              >
                Email
              </label>
              <input
                autocomplete="email"
                class="input "
                id="email"
                name="email"
                pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$"
                placeholder="email address"
                required=""
                title="enter valid email address"
                type="email"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                aria-label="Password"
                autocomplete="new-password"
                class="input "
                id="password"
                name="password1"
                pattern="^.{8,}$"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row password-confirm"
            >
              <label
                for="password-confirm"
              >
                Confirm password
              </label>
              <input
                aria-label="Confirm Password"
                autocomplete="new-password"
                class="input "
                id="password-confirm"
                name="password2"
                pattern="^.{8,}$"
                placeholder="confirm password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
          </div>
          <div
            class="row register"
          >
            <input
              class="button full"
              type="submit"
              value="Sign up"
            />
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Registration /> rendering should render correctly 1`] = `
<div>
  <div
    class="container content"
    id="registration"
  >
    <div
      class="inner"
    >
      <form
        class="main-column "
        data-testid="registration-form"
        id="registration-form"
      >
        <div
          class="inner"
        >
          <div
            class="fieldset"
          >
            <div
              class="row email"
            >
              <label
                for="email"
              >
                Email
              </label>
              <input
                autocomplete="email"
                class="input "
                id="email"
                name="email"
                pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$"
                placeholder="email address"
                required=""
                title="enter valid email address"
                type="email"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                aria-label="Password"
                autocomplete="new-password"
                class="input "
                id="password"
                name="password1"
                pattern="^.{8,}$"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row password-confirm"
            >
              <label
                for="password-confirm"
              >
                Confirm password
              </label>
              <input
                aria-label="Confirm Password"
                autocomplete="new-password"
                class="input "
                id="password-confirm"
                name="password2"
                pattern="^.{8,}$"
                placeholder="confirm password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
          </div>
          <div
            class="row register"
          >
            <input
              class="button full"
              type="submit"
              value="Sign up"
            />
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Registration /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div>
  <div
    class="container content"
    id="registration"
  >
    <div
      class="inner"
    >
      <form
        class="main-column "
        data-testid="registration-form"
        id="registration-form"
      >
        <div
          class="inner"
        >
          <div
            class="fieldset"
          >
            <div
              class="row email"
            >
              <label
                for="email"
              >
                EMAIL
              </label>
              <input
                autocomplete="email"
                class="input "
                id="email"
                name="email"
                pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$"
                placeholder="EMAIL_PHOLD"
                required=""
                title="EMAIL_PTRN_DESC"
                type="email"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                PWD_LBL
              </label>
              <input
                aria-label="Password"
                autocomplete="new-password"
                class="input "
                id="password"
                name="password1"
                pattern="^.{8,}$"
                placeholder="PWD_PHOLD"
                required=""
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="PWD_REVEAL"
                />
              </div>
            </div>
            <div
              class="row password-confirm"
            >
              <label
                for="password-confirm"
              >
                CONFIRM_PWD_LBL
              </label>
              <input
                aria-label="Confirm Password"
                autocomplete="new-password"
                class="input "
                id="password-confirm"
                name="password2"
                pattern="^.{8,}$"
                placeholder="CONFIRM_PWD_PHOLD"
                required=""
                title="PWD_PTRN_DESC"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="PWD_REVEAL"
                />
              </div>
            </div>
          </div>
          <div
            class="row register"
          >
            <input
              class="button full"
              type="submit"
              value="REGISTER_BTN_TXT"
            />
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              EMAIL
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              HELPDESK
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Registration and Mobile Phone Verification interactions should render modal 1`] = `
<div>
  <div
    class="container content"
    id="registration"
  >
    <div
      class="inner"
    >
      <form
        class="main-column "
        data-testid="registration-form"
        id="registration-form"
      >
        <div
          class="inner"
        >
          <div
            class="fieldset"
          >
            <div
              class="row phone-number"
            >
              <label
                for="phone-number"
              >
                Mobile phone number
              </label>
              <div
                class=" react-tel-input "
              >
                <div
                  class="special-label"
                >
                  Phone
                </div>
                <input
                  autocomplete="tel"
                  class="form-control input "
                  id="phone-number"
                  name="phone_number"
                  placeholder="enter mobile phone number"
                  required=""
                  type="tel"
                  value="+91"
                />
                <div
                  class="flag-dropdown "
                >
                  <div
                    aria-haspopup="listbox"
                    class="selected-flag"
                    role="button"
                    tabindex="0"
                    title="India: + 91"
                  >
                    <div
                      class="flag in"
                    >
                      <div
                        class="arrow"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row email"
            >
              <label
                for="email"
              >
                Email
              </label>
              <input
                autocomplete="email"
                class="input "
                id="email"
                name="email"
                pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$"
                placeholder="email address"
                required=""
                title="enter valid email address"
                type="email"
                value=""
              />
            </div>
            <div
              class="row password"
            >
              <label
                for="password"
              >
                Password
              </label>
              <input
                aria-label="Password"
                autocomplete="new-password"
                class="input "
                id="password"
                name="password1"
                pattern="^.{8,}$"
                placeholder="password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
            <div
              class="row password-confirm"
            >
              <label
                for="password-confirm"
              >
                Confirm password
              </label>
              <input
                aria-label="Confirm Password"
                autocomplete="new-password"
                class="input "
                id="password-confirm"
                name="password2"
                pattern="^.{8,}$"
                placeholder="confirm password"
                required=""
                title="password must be a minimum of 6 characters"
                type="password"
                value=""
              />
              <div
                class="password-toggle"
                data-testid="password-toggle-icon"
                role="button"
                tabindex="0"
              >
                <i
                  class="eye"
                  title="reveal password"
                />
              </div>
            </div>
          </div>
          <div
            class="row register"
          >
            <input
              class="button full"
              type="submit"
              value="Sign up"
            />
          </div>
        </div>
      </form>
      <div
        class="side-column contact"
      >
        <div
          class="inner"
        >
          <div
            class="row"
          >
            <span
              class="label"
            >
              Email
              :
            </span>
            <a
              class="link"
              href="mailto:support.org"
            >
              support.org
            </a>
          </div>
          <div
            class="row"
          >
            <span
              class="label"
            >
              Helpdesk
              :
            </span>
            <a
              class="link"
              href="tel:+1234567890"
            >
              +1234567890
            </a>
          </div>
          <div
            class="contact-links"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
